# Takietam

./: CMakeLists.txt  README.md  template-patrix.rar  template-piotr.rar  template.rar
src/: CompanionAI.cpp  IntelligentCompanion.cpp  IntelligentCompanion.h  Plugin.cpp  Plugin.hpp  SimplePlugin.cpp  Sources.hpp
